# bevy_meshopt

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
