[package]
name = "bevy_meshopt"
description = "Small wrapper around the `meshopt` library for using with Bevy!"
author = "aceeri (conmcclusk@gmail.com)"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17", default-features = false, features = [ "bevy_mesh" ] }
meshopt = "0.6.2"
