[package]
name = "bevy_meshopt"
version = "0.1.0"
description = "Small wrapper around the `meshopt` library for using with Bevy!"
authors = ["Connor McCluskey <conmcclusk@gmail.com>"]
edition = "2024"
exclude = ["assets/", ".github/"]
categories = ["game-engines", "graphics", "rendering"]
keywords = ["bevy", "mesh", "optimization", "simplification"]
repository = "https://github.com/aceeri/bevy_meshopt"
documentation = "https://docs.rs/bevy_meshopt"
license = "MIT OR Apache-2.0"
rust-version = "1.88.0"
readme = "README.md"

[dependencies]
bevy = { version = "0.17", default-features = false, features = ["bevy_mesh"] }
meshopt = { git = "https://github.com/olsgo/meshopt-rs", features = ["bevy"] }
bytemuck = { version = "1.20", features = ["extern_crate_std"] }

[patch."https://github.com/olsgo/meshopt-rs"]
meshopt = { path = "../meshopt-rs" }

[dev-dependencies]
bevy_egui = "0.38"
bevy-inspector-egui = "0.35"
bevy = { version = "0.17", default-features = true, features = [ "bevy_gltf"] }
